# AlgoGen

./: .gitignore  .gitignore~  Doxyfile
AlgoGen/: CMakeLists.txt  genome.h  main.cpp  motmystere.cpp  motmystere.h  population.cpp  population.h
AlgoGen.xcodeproj/: project.pbxproj
AlgoGen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AlgoGen.xcodeproj/project.xcworkspace/xcshareddata/: AlgoGen.xccheckout
AlgoGen.xcodeproj/project.xcworkspace/xcuserdata/moreau.xcuserdatad/: UserInterfaceState.xcuserstate
AlgoGen.xcodeproj/xcuserdata/moreau.xcuserdatad/xcschemes/: AlgoGenTests.xcscheme  xcschememanagement.plist
AlgoGen/tests/: testf.cpp  tests.cpp
AlgoGenTests/: main.cpp
AlgoGenTests/gtest.framework/Versions/A/: gtest
